[gd_scene load_steps=15 format=3 uid="uid://duou4pkj0p0v1"]

[ext_resource type="Script" path="res://levels/components/fire.gd" id="1_p5y4s"]
[ext_resource type="Texture2D" uid="uid://cww680nc7qusd" path="res://assets/textures/mackin/radial-box.4x4.tres" id="2_f1qr0"]
[ext_resource type="Shader" path="res://assets/shaders/unshaded.gdshader" id="2_q063p"]
[ext_resource type="Texture2D" uid="uid://bk5sb40hg5xhk" path="res://assets/character/goblin.png" id="3_1k3m5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a7hna"]
radius = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qx5jm"]
shader = ExtResource("2_q063p")

[sub_resource type="Gradient" id="Gradient_3iw0f"]
offsets = PackedFloat32Array(0, 0.543011, 1)
colors = PackedColorArray(0.905882, 0.117647, 0.00784314, 1, 0.980392, 0.47451, 0, 1, 1, 0.843137, 0.160784, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k4k2q"]
gradient = SubResource("Gradient_3iw0f")

[sub_resource type="Curve" id="Curve_6owt5"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_6uk1e"]
curve = SubResource("Curve_6owt5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ryrb6"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 1.0
initial_velocity_max = 8.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_6uk1e")
color_initial_ramp = SubResource("GradientTexture1D_k4k2q")

[sub_resource type="Gradient" id="Gradient_4r45o"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.501961)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yg7b1"]
gradient = SubResource("Gradient_4r45o")
width = 4
height = 4
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true
metadata/_snap_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_x7q4j"]
radius = 1.0

[node name="Fire" type="Area2D"]
collision_layer = 2
collision_mask = 6
script = ExtResource("1_p5y4s")

[node name="FireGrowthShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a7hna")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_qx5jm")
position = Vector2(-1, 1)
amount = 100
amount_ratio = 0.005
process_material = SubResource("ParticleProcessMaterial_ryrb6")
texture = ExtResource("2_f1qr0")

[node name="RedParticles" type="GPUParticles2D" parent="."]
visible = false
process_material = SubResource("ParticleProcessMaterial_ryrb6")
texture = SubResource("GradientTexture2D_yg7b1")

[node name="OrangeParticles" type="GPUParticles2D" parent="."]
visible = false
process_material = SubResource("ParticleProcessMaterial_ryrb6")
texture = SubResource("GradientTexture2D_yg7b1")

[node name="YellowParticles" type="GPUParticles2D" parent="."]
visible = false
process_material = SubResource("ParticleProcessMaterial_ryrb6")
texture = SubResource("GradientTexture2D_yg7b1")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(24, -1)
texture = ExtResource("3_1k3m5")
hframes = 8
vframes = 8

[node name="SpreadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FireOriginArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="FireOrigin" type="CollisionShape2D" parent="FireOriginArea"]
shape = SubResource("CircleShape2D_x7q4j")
debug_color = Color(0.813957, 0.0020188, 0.978797, 0.42)
